@@ -1,6 +1,11 @@
 # ChangeLog for app-crypt/p11-kit
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/p11-kit/ChangeLog,v 1.66 2014/07/27 18:26:48 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/p11-kit/ChangeLog,v 1.67 2014/08/02 10:26:52 alonbl Exp $
+
+*p11-kit-0.20.3-r1 (02 Aug 2014)
+
+  02 Aug 2014; Alon Bar-Lev <alonbl@gentoo.org> +p11-kit-0.20.3-r1.ebuild:
+  Add libff USE flag, bug#518808
 
 *p11-kit-0.20.3 (27 Jul 2014)
 
